<resources>
    <string name="facebook_app_id">2476224819319867</string>
    <string name="fb_login_protocol_scheme">fb2476224819319867</string>
    <string name="app_name">SportApp</string>
    <string name="email">Correo electronico</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="register">Registrarse</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="cellphone">Celular</string>
    <string name="favorite_sport">Deporte favorito</string>
    <string name="login_with_facebook">Ingresar con facebook</string>
    <string name="new_event">Nuevo Evento</string>
    <string name="description">Descripcion</string>
    <string name="numberPeople">Número de personas</string>
    <string name="money">Costo</string>
    <string name="sport">Deporte</string>
    <string name="date">Fecha y hora</string>
    <string name="add_location">Agregar ubicacion</string>
    <string name="create">Crear evento</string>
    <string name="format_date">dd/mm/yyyy</string>
    <string name="format_hour">hh:mm</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="edit_info">Editar información</string>
    <string name="accept_changes">Aceptar cambios</string>
    <string name="request_to_events">Solicitudes a eventos</string>
    <string name="requests_list">Listado de solicitudes</string>

    <string name="not_user_yet">¿No eres usuario aún? "\n" Registrate</string>
    <string-array name="sports_array">
        <item>Fútbol</item>
        <item>Fútbol Sala</item>
        <item>Voleibol</item>
        <item>Baloncesto</item>
        <item>Tenis</item>
        <item>Balonmano</item>
        <item>Beisbol</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


</resources>
