<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp">

        </ImageView>


        <EditText
            android:id="@+id/register_name_et"
            style="@style/styleEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/name"
            android:layout_marginTop="30dp" />


        <EditText
            android:id="@+id/register_mail_et"
            style="@style/styleEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/register_password_et"
            style="@style/styleEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/register_repassword_et"
            style="@style/styleEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/confirm_password"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/register_cellphone_et"
            style="@style/styleEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/cellphone"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/register_sport_et"
            style="@style/styleEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/favorite_sport"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/register_btn"
            style="@style/styleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/register"/>


    </LinearLayout>

    </ScrollView>


</LinearLayout>