<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="80dp"
        android:gravity="center">



        <EditText
            style="@style/styleEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="30dp"/>

        <EditText
            style="@style/styleEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="30dp"/>


        <Button
            style="@style/styleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/login"/>

        <Button
            style="@style/styleButton.Facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/login_with_facebook"/>

    </LinearLayout>


</LinearLayout>